--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -29,16 +29,18 @@ import { PAGES } from "../../consts";
         <li><a href={PAGES.REFORM.slug}>家づくり</a></li>
         <li><a href={PAGES.LEARN.slug}>暮らしの講座</a></li>
         <li><a href="/event">貸しスペース</a></li>
-        <li><a href={PAGES.REPRODUCTION.slug}>古民家再生</a></li>
+        <li class="pc">
+          <a href={PAGES.REPRODUCTION.slug}>古民家再生</a>
+        </li>
       </ul>
       <ul class="footer-menu">
-        <li><a href={PAGES.CONSULT.slug}>暮らしの相談</a></li>
-        <li><a href="#">家事セラピスト養成講座</a></li>
-        <li><a href={PAGES.STAFF.slug}>スタッフ紹介</a></li>
+        <li class="pc"><a href={PAGES.CONSULT.slug}>暮らしの相談</a></li>
+        <li class="pc"><a href="#">家事セラピスト養成講座</a></li>
+        <li class="pc"><a href={PAGES.STAFF.slug}>スタッフ紹介</a></li>
       </ul>
       <ul class="footer-menu">
         <li><a href="/about/">会社概要・アクセス</a></li>
-        <li><a href="/siryo/">お問い合わせ</a></li>
+        <li class="pc"><a href="/siryo/">お問い合わせ</a></li>
       </ul>
     </div>
   </div>
@@ -108,6 +110,47 @@ import { PAGES } from "../../consts";
   @media screen and (max-width: 1024px) {
     .footer-content {
       flex-direction: column;
+    }
+  }
+  @media screen and (max-width: $mobileBreakPoint) {
+    .footer-sns {
+    }
+    :global(.sns_list) {
+      display: none;
+    }
+    .footer-content {
+      flex-direction: column-reverse;
+    }
+    .footer-right {
+      margin-top: vw(43px);
+    }
+    .footer-menu {
+      flex-direction: column;
+      text-align: center;
+      & + & {
+        margin-top: 0;
+      }
+      li {
+        margin-top: vw(28px);
+        & + li {
+          margin-left: 0;
+        }
+      }
+      &:first-child li:first-child {
+        margin-top: 0;
+      }
+    }
+    .footer-left {
+      margin-top: vw(52px);
+      text-align: center;
+      address {
+        margin-top: vw(29px);
+      }
+    }
+    .footer-logo {
+      margin-bottom: 0px;
+      width: vw(195px);
+      height: vw(43px);
     }
   }
 </style>
