--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $baseFontSize: 16px;
 $baseWindowWidth: 1920px; //画面の幅
 $designLineWidth: 1676px; //デザインラインの幅
 $baseContentWidth: 1168px; //コンテンツ幅
+$mobileBreakPoint: 768px; //モバイルブレイクポイント
 $mobileDesignWidth: 375px; //モバイルデザインの幅
 $mobileContentWidth: 320px; //モバイルコンテンツ幅
 $h1: 4.8rem;
