--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -41,6 +41,7 @@ import ModelImage from "~/img/model_image.png";
         margin: auto;
         .text {
           max-width: 563px;
+          line-height: calc(30 / 16);
         }
       }
       .contact {
