--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -86,6 +86,9 @@ import { PAGES } from "../../consts";
       margin-left: 26px;
     }
   }
+  address {
+    line-height: calc(30 / 16);
+  }
   .footer-sns {
     padding-top: 70px;
     min-height: 244px;
