--- a/src/components/reform/detail/UserVoice.astro
+++ b/src/components/reform/detail/UserVoice.astro
@@ -50,5 +50,6 @@ const { title, src, name, text, class: className } = Astro.props;
   }
   .user_voice_text {
     margin-top: 1em;
+    line-height: calc(30 / 16);
   }
 </style>
