--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -113,6 +113,7 @@ import SNSList from "~/components/global/SNSList.astro";
   }
   .video_copy {
     margin-bottom: 90px;
+    line-height: calc(32 / 16);
   }
   .learn_sns {
     margin-bottom: 306px;
@@ -126,5 +127,6 @@ import SNSList from "~/components/global/SNSList.astro";
     max-width: 450px;
     margin-left: auto;
     margin-right: auto;
+    line-height: calc(32 / 16);
   }
 </style>
