--- a/src/pages/staff.astro
+++ b/src/pages/staff.astro
@@ -1,10 +1,21 @@
 ---
+import useWPApi, { WP_REST_API_Staff } from "~/hooks/useWPApi";
+import { Image } from "@astrojs/image/components";
+
 import PageCatch from "~/components/catch/PageCatch.astro";
 import { PAGES } from "~/consts";
-import { Image } from "@astrojs/image/components";
 import PageContent from "~/layouts/PageContent.astro";
-const { className } = PAGES.STAFF;
 import BreadCrumb from "~/components/common/BreadCrumb.astro";
+
+const { className } = PAGES.STAFF;
+const { fetchPosts } = useWPApi();
+
+const Staffs = await fetchPosts<WP_REST_API_Staff[]>(
+  "staff",
+  { per_page: 100, order: "asc" },
+  false
+);
+if (!Staffs) return;
 ---
 
 <PageContent class={className}>
@@ -13,25 +24,26 @@ import BreadCrumb from "~/components/common/BreadCrumb.astro";
   <h2 class="page_title">下記よりスタッフの詳細をご覧頂けます。</h2>
   <div class="staff_list">
     {
-      [1, 2, 3, 4, 5, 6, 7, 8, 9, 10].map(() => (
-        <div class="staff_box">
-          <a class="staff_link" href="/staff/01">
-            <Image
-              class="staff_img"
-              src="https://placehold.jp/258x241.png"
-              format={"webp"}
-              loading={"eager"}
-              width={258}
-              height={241}
-              alt="スタッフの写真"
-            />
-            <div class="staff_text">
-              <p class="staff_title">代表取締役</p>
-              <h4 class="staff_name">淀川　洋子</h4>
-            </div>
-          </a>
-        </div>
-      ))
+      Staffs &&
+        Staffs.map((staff) => (
+          <div class="staff_box">
+            <a class="staff_link" href={`/staff/${staff.id}`}>
+              <Image
+                class="staff_img"
+                src={staff.acf.image}
+                format={"webp"}
+                loading={"eager"}
+                width={258}
+                height={241}
+                alt={staff.acf.first_name + staff.acf.last_name}
+              />
+              <div class="staff_text">
+                <p class="staff_title">{staff.acf.department}</p>
+                <h4 class="staff_name">{`${staff.acf.first_name}　${staff.acf.last_name}`}</h4>
+              </div>
+            </a>
+          </div>
+        ))
     }
   </div>
 </PageContent>
