--- a/src/components/common/ContentBanner.astro
+++ b/src/components/common/ContentBanner.astro
@@ -54,4 +54,9 @@ import BannerAkiya from "~/img/banner_akiya.png";
       margin-left: 96px;
     }
   }
+  @media screen and (max-width: $mobileBreakPoint) {
+    .content-banner {
+      display: none;
+    }
+  }
 </style>
