--- a/src/components/global/SNSList.astro
+++ b/src/components/global/SNSList.astro
@@ -42,4 +42,13 @@ import Youtube from "~/img/sns_youtube.png";
       }
     }
   }
+  @media screen and (max-width: $mobileBreakPoint) {
+    .sns_list {
+      ul {
+        flex-direction: column;
+        align-items: center;
+        gap: vw(37px);
+      }
+    }
+  }
 </style>
