--- a/src/components/home/TopNavi.astro
+++ b/src/components/home/TopNavi.astro
@@ -206,6 +206,12 @@ const navContents: NavContent[] = [
   }
   @media screen and (max-width: $mobileBreakPoint) {
     .top_nav {
+      ul {
+        padding: 0 vw(25px);
+      }
+      .title_box {
+        width: calc(100% - 48px);
+      }
       .title {
         font-size: vw(21px);
       }
