--- a/src/components/post/ReformCaseList.astro
+++ b/src/components/post/ReformCaseList.astro
@@ -73,4 +73,9 @@ const ReformPosts = [
     justify-content: center;
     column-gap: 53px;
   }
+  @media screen and (max-width: $mobileBreakPoint) {
+    ul {
+      gap: vw(21px);
+    }
+  }
 </style>
