--- a/src/components/catch/TopCatch.astro
+++ b/src/components/catch/TopCatch.astro
@@ -47,9 +47,10 @@ import Logo from "~/img/top/top_logo.png";
     @media screen and (min-width: 1650px) {
       top: 100px;
     }
-    @media screen and (min-width: $mobileBreakPoint) {
-      width: vw(140px);
-      height: vw(43px);
+    @media screen and (max-width: $mobileBreakPoint) {
+      width: vw(126px);
+      height: vw(44px);
+      top: 50px;
     }
   }
   .sub_copy {
@@ -57,7 +58,7 @@ import Logo from "~/img/top/top_logo.png";
     font-weight: bold;
     margin-top: 78px;
     font-size: 19px;
-    @media screen and (min-width: $mobileBreakPoint) {
+    @media screen and (max-width: $mobileBreakPoint) {
       display: none;
     }
   }
@@ -71,7 +72,7 @@ import Logo from "~/img/top/top_logo.png";
     left: 0;
     right: 0;
     text-align: center;
-    @media screen and (min-width: $mobileBreakPoint) {
+    @media screen and (max-width: $mobileBreakPoint) {
       display: none;
     }
     &:before {
