--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -14,14 +14,12 @@ import ModelImage from "~/img/model_image.png";
       モデルハウスは貸しスペースも行っており、ヨガ教室や料理教室、韓国語講座などにもご利用いただいています。<br
       />
       <br />
-      モデルハウス見学ご希望の方は、<a href="tel:0120-200-789">0120-200-789</a
+      モデルハウス見学ご希望の方は、<br class="sp"><a href="tel:0120-200-789">0120-200-789</a
       >まで事前にご予約ください。<br />
       <br />
       <dl class="contact">
         <dt>営業時間</dt><dd>10:00～17:00（水曜定休）</dd>
-        <dt>所在地</dt><dd>福岡県太宰府市通古賀5-2-3</dd>
-        <dt>&emsp;</dt><dd>※駐車場あり</dd>
-        <dt>&emsp;</dt><dd>※西鉄大牟田線都府楼前駅より徒歩１０分</dd>
+        <dt>所在地</dt><dd>福岡県太宰府市通古賀5-2-3<br>※駐車場あり<br>※西鉄大牟田線都府楼前駅より徒歩１０分</dd>
       </dl>
     </div>
   </div>
@@ -46,9 +44,42 @@ import ModelImage from "~/img/model_image.png";
       }
       .contact {
         padding-left: 30px;
+        display: flex;
+        flex-wrap: wrap;
         dt {
-          width: 100px;
-          float: left;
+          width: 18%;
+        }
+        dd {
+          width: 82%;
+        }
+      }
+    }
+    @media screen and (max-width: $mobileBreakPoint) {
+      .about_modelhouse {
+        padding: 0 vw(43px);
+        h2 {
+          margin-bottom: vw(36px);
+        }
+        .content {
+          flex-direction: column;
+          img {
+            margin-bottom: vw(23px);
+          }
+          .text {
+            font-size: vw(14px);
+          }
+        }
+        .contact {
+          padding: 0;
+          dt {
+            width: 100%;
+          }
+          dd {
+            width: 100%;
+            &:not(:last-child) {
+              margin-bottom: vw(23px);
+            }
+          }
         }
       }
     }
