--- a/src/components/common/InquiryMore.astro
+++ b/src/components/common/InquiryMore.astro
@@ -7,7 +7,7 @@
   >
   <a class="more_link" href="/siryo">＞メールで相談してみる</a>
 </div>
-<style>
+<style lang="scss">
   .inquiry_more {
     display: flex;
     justify-content: center;
@@ -19,4 +19,19 @@
     font-weight: bold;
     margin-top: 167px;
   }
+  @media screen and (max-width: $mobileBreakPoint) {
+		.inquiry_more {
+      display: block;
+      text-align: center;
+      padding: 0 vw(31px);
+      margin-bottom: vw(100px);
+    }
+    .more_link {
+      padding: 0;
+      margin: 0;
+      &:not(:last-child) {
+        margin-bottom: vw(25px);
+      }
+    }
+	}
 </style>
