workflowディスパッチを追加。リンクの間違いやスタイルを修正

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -13,6 +13,7 @@ import { PAGES } from "../../consts";
       <Image
         class="footer-logo"
         src={FooterLogo}
+        format={"webp"}
         width={233}
         alt="イエノコト"
       />
@@ -39,7 +40,7 @@ import { PAGES } from "../../consts";
         <li class="pc"><a href={PAGES.STAFF.slug}>スタッフ紹介</a></li>
       </ul>
       <ul class="footer-menu">
-        <li><a href="/about/">会社概要・アクセス</a></li>
+        <li><a href="/company/">会社概要・アクセス</a></li>
         <li class="pc"><a href="/siryo/">お問い合わせ</a></li>
       </ul>
     </div>
