--- a/src/components/global/SNSList.astro
+++ b/src/components/global/SNSList.astro
@@ -37,6 +37,7 @@ import Youtube from "~/img/sns_youtube.png";
       width: 298px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       img {
         vertical-align: middle;
       }
