--- a/src/components/home/TopNavi.astro
+++ b/src/components/home/TopNavi.astro
@@ -8,7 +8,7 @@ import NavSaisei from "~/img/top/nav_saisei.jpg";
 import NavConsult from "~/img/top/nav_consult.jpg";
 import NavTherapist from "~/img/top/nav_therapist.jpg";
 import NavStaff from "~/img/top/nav_staff.jpg";
-import NavAbout from "~/img/top/nav_about.jpg";
+import NavCompany from "~/img/top/nav_about.jpg";
 import NavInquiry from "~/img/top/nav_inquiry.jpg";
 type NavContent = {
   image: ImageMetadata;
@@ -73,10 +73,10 @@ const navContents: NavContent[] = [
     link: PAGES.STAFF.slug,
   },
   {
-    image: NavAbout,
+    image: NavCompany,
     title: "会社概要・アクセス",
     description: "会社概要とアクセス、所在地をご紹介します。",
-    link: "/about",
+    link: "/company",
   },
   {
     image: NavInquiry,
