--- a/src/pages/staff.astro
+++ b/src/pages/staff.astro
@@ -60,6 +60,7 @@ if (!Staffs) return;
     justify-content: space-between;
     row-gap: 133px;
     grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 430px;
   }
   .staff_link {
     display: inline-block;
