--- a/src/components/global/Navi.astro
+++ b/src/components/global/Navi.astro
@@ -33,7 +33,7 @@ const isHome = Astro.url.pathname === "/";
       <li><a href={PAGES.REPRODUCTION.slug}>古民家再生</a></li>
       <li><a href={PAGES.CONSULT.slug}>暮らしの相談所</a></li>
       <li><a href={PAGES.STAFF.slug}>スタッフ</a></li>
-      <li><a href="/about/">会社概要</a></li>
+      <li><a href="/company/">会社概要</a></li>
       <li><a href="/siryo/">お問い合わせ</a></li>
     </ul>
   </div>
