gooleアナリティクス追加

--- a/src/components/global/Head.astro
+++ b/src/components/global/Head.astro
@@ -36,4 +36,19 @@ const { image = "/placeholder-social.jpg" } = Astro.props;
   <meta property="twitter:title" content={SITE_TITLE} />
   <meta property="twitter:description" content={SITE_DESCRIPTION} />
   <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    type="text/partytown"
+    src="https://www.googletagmanager.com/gtag/js?id=G-EPE94HQ0RP"
+  ></script>
+  <script type="text/partytown">
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-EPE94HQ0RP");
+  </script>
 </head>
